--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -18,10 +18,10 @@
     margin-bottom: 10px;
 }
 
-.blogStyle {
-    padding-top: 10;
-    padding-left: 2;
+.blog {
+    padding-top: 10px;
+    padding-left: 2px;
     border: solid;
-    border-width: 1;
-    margin-bottom: 5;
+    border-width: 1px;
+    margin-bottom: 5px;
 }
